// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform Select Custom App Method Verify Tests should transform elements when transaction only contains push method type with Custom App authenticator key, autoChallenge option, and has verify with something else link 1`] = `
{
  "data": {
    "authenticator.autoChallenge": "true",
    "authenticator.methodType": "push",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.custom_app.push.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "inputMeta": {
            "name": "authenticator.autoChallenge",
            "value": "true",
          },
        },
        "type": "Field",
      },
      {
        "label": "oie.custom_app.sendPushButton",
        "options": {
          "step": "select-authenticator-authenticate",
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "contentType": "footer",
        "options": {
          "label": "oie.verification.switch.authenticator",
          "onClick": [Function],
          "step": "select-authenticator-authenticate",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Select Custom App Method Verify Tests should transform elements when transaction only contains push method type with autoChallenge option and Custom App authenticator key 1`] = `
{
  "data": {
    "authenticator.autoChallenge": "true",
    "authenticator.methodType": "push",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.custom_app.push.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "inputMeta": {
            "name": "authenticator.autoChallenge",
            "value": "true",
          },
        },
        "type": "Field",
      },
      {
        "label": "oie.custom_app.sendPushButton",
        "options": {
          "step": "select-authenticator-authenticate",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Select OV Method Verify Tests should transform elements when transaction contains push and totp method types 1`] = `
{
  "data": {
    "authenticator.autoChallenge": "true",
    "authenticator.methodType": "push",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.select.authenticators.verify.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.select.authenticators.verify.subtitle",
        },
        "type": "Description",
      },
      {
        "options": {
          "buttons": [
            {
              "label": "Get a push notification",
              "options": {
                "actionParams": {
                  "authenticator.id": "abcde1234",
                  "authenticator.methodType": "push",
                },
                "ariaLabel": "Select to get a push notification.",
                "ctaLabel": "Select",
                "key": "okta_verify",
                "step": "select-authenticator-authenticate",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
            {
              "label": "Enter a code",
              "options": {
                "actionParams": {
                  "authenticator.id": "abcde1234",
                  "authenticator.methodType": "totp",
                },
                "ariaLabel": "Select to enter a code.",
                "ctaLabel": "Select",
                "key": "okta_verify",
                "step": "select-authenticator-authenticate",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-verify-list",
        },
        "type": "AuthenticatorButtonList",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Select OV Method Verify Tests should transform elements when transaction only contains push method type with autoChallenge option 1`] = `
{
  "data": {
    "authenticator.autoChallenge": "true",
    "authenticator.methodType": "push",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.okta_verify.push.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "inputMeta": {
            "name": "authenticator.autoChallenge",
            "value": "true",
          },
        },
        "type": "Field",
      },
      {
        "label": "oie.okta_verify.sendPushButton",
        "options": {
          "step": "select-authenticator-authenticate",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Select OV Method Verify Tests should transform elements when transaction only contains push method type with autoChallenge option and has verify with something else link 1`] = `
{
  "data": {
    "authenticator.autoChallenge": "true",
    "authenticator.methodType": "push",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.okta_verify.push.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "inputMeta": {
            "name": "authenticator.autoChallenge",
            "value": "true",
          },
        },
        "type": "Field",
      },
      {
        "label": "oie.okta_verify.sendPushButton",
        "options": {
          "step": "select-authenticator-authenticate",
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "contentType": "footer",
        "options": {
          "label": "oie.verification.switch.authenticator",
          "onClick": [Function],
          "step": "select-authenticator-authenticate",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
